<?xml version="1.0"?>
<package format='2'>
  <name>ros_common_time</name>
  <version>0.9.0</version>
  <description>Interfaces between iness time and ROS time definitions</description>

  <maintainer email="stefan@insightness.com">Stefan Isler</maintainer>
  <license>Insightness Proprietary</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  
</package>
