<?xml version="1.0"?>
<package format='2'>
  <name>ros_common_util</name>
  <version>0.9.0</version>
  <description>Iness ROS common utils</description>

  <maintainer email="stefan@insightness.com">Stefan Isler</maintainer>
  <license>Insightness Proprietary</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cmake_modules</depend>
  <depend>sees</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>ros_common_time</depend>
    
</package>
