<?xml version="1.0"?>
<package format='2'>
  <name>ros_sees</name>
  <version>0.9.0</version>
  <description>ROS classes for the sees driver package</description>

  <maintainer email="stefan@insightness.com">insightness</maintainer>
  <license>Insightness Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sees</depend>
  <depend>ros_dvs_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>ros_common_util</depend>
  <depend>eigen_catkin</depend>
  <depend>sensor_msgs</depend>
  <depend>rpg_common</depend>
  
</package>
