<?xml version="1.0"?>
<package format="2">
  <name>sees</name>
  <version>1.2.1</version>
  <description>

	The C++ SEES Driver Library package

  </description>
  <url></url>
  <maintainer email="stefan@insightness.com">Stefan Isler</maintainer>
  <license>Insightness Proprietary</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
